--- a/conditions.html
+++ b/conditions.html
@@ -52,6 +52,9 @@
 		background-color: lightgray;
 		cursor: pointer;
 	}
+	#cond td>* {
+		vertical-align: middle;
+	}
 </style>
 <button onclick='reset()'>RESET</button>
 <button onclick="imprt()">IMPORT</button>
