--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       }
       CVT_FLOW = {MGD:694.4422834,'m^3/hr':4.402867544,'L/s':15.85032316, 
         'm^3/s':15850.32316, 'ft^3/s':448.8311693};
-        
+
       function cvt(v,i,nu,m) {
         if (m[Units[i]]) {
           v *= m[Units[i]];
@@ -139,7 +139,7 @@
         Units = loadProp('units');
         return (DefCond= loadProp('defCond'));
       }
-      function load(nm,bkHide,fn) {
+      function load(nm,bkHide) {
         back = main;
         $('#container').load(nm+'.html',function () {
           if (bkHide) {
@@ -147,7 +147,6 @@
           } else {
             $('#back').show();
           }
-          if (fn) fn();
         });
       }
       function main() {
