--- a/grid.html
+++ b/grid.html
@@ -107,7 +107,7 @@
     </tr>
     <tr>
       <td>Number Stages</td>
-      <td><input name='stages'></td>
+      <td><input name='stages' type=number></td>
     </tr>
     <tr>
       <td>Fixed specific speed?</td>
@@ -380,7 +380,7 @@
     }
   });         
 
-  $('[name=head]').last().change(function() {
-    alert('hi');
-  });
+  // $('[name=head]').last().change(function() {
+  //   alert('hi');
+  // });
 </script>
