--- a/grid.html
+++ b/grid.html
@@ -62,7 +62,7 @@
         <th>
           <button onclick='rm(this)'><i class="fa fa-times"/></button>
           <span></span>
-          <button onclick='showIO(this);'><i class="fa fa-floppy-o"></i></button><button onclick='edit(this)'><i class="fa fa-pencil-square-o"></i></button>
+          <button class=ioBtn onclick='showIO(this);'><i class="fa fa-floppy-o"></i></button><button onclick='edit(this)'><i class="fa fa-pencil-square-o"></i></button>
         </th>      
     </tr>
   </thead>
@@ -380,7 +380,7 @@
     }
   });         
 
-  // $('[name=head]').last().change(function() {
-  //   alert('hi');
-  // });
+  $('[name]').change(function() {
+    $('.ioBtn').eq(parIdx(this,-1)).addClass('prime');
+  });
 </script>
