--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         border: solid 1px #fff;
         box-shadow: inset 1px 1px 2px 0 #707070;
       }
+      input[type=radio]:hover,input[type=checkbox]:hover {
+        cursor: pointer;
+      }
       #back {
         position: absolute;
         top: 1rem;
