--- a/grid.html
+++ b/grid.html
@@ -111,7 +111,7 @@
     </tr>
     <tr>
       <td>Fixed specific speed?</td>
-      <td><input name='speed'></td>
+      <td><input name='speed' type=checkbox></td>
     </tr>
     <tr>
       <td class='th'>Motor</td><td/>
@@ -292,14 +292,14 @@
   function colData(e) {
     let v,d={};
     colFlds(e).each(function(i,el) {
-      switch (el.tagName) {
-        case 'INPUT':
+      switch (el.type) {
+        case 'text':case 'number':
           v = $(el).val();
           break;
-        case 'CHECKBOX':
+        case 'checkbox':
           v = el.checked;
           break;
-        case 'SELECT':
+        case 'select-one':
           v = $(el).children(':selected').index();
       }
       d[$(el).attr('name')] = v;
