--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         padding:2.5% 5%;
         background-color: ghostwhite;
       }
-      .hover:hover, button:hover {
+      button:hover {
         cursor: pointer;
         
       }
