--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         border-radius: 4px;
         padding: 3px 6px;
       }
-      button.prime {
+      .prime {
         color: white;
         background-color: dodgerblue;
       }     
@@ -42,16 +42,13 @@
         border: solid 1px #fff;
         box-shadow: inset 1px 1px 2px 0 #707070;
       }
-      input[type=radio]:hover,input[type=checkbox]:hover {
+      [type=radio]:hover,[type=checkbox]:hover {
         cursor: pointer;
       }
       #back {
         position: absolute;
         top: 1rem;
         left: 1rem;
-        display: none;
-      }
-      .hide {
         display: none;
       }
     </style>
