--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         font-size: .75rem;
         font-style: italic;
       }
-
+      label {
+        display: block;
+      }
+      
       input:not([type=radio]) {
         padding: .5em;
         border: solid 1px #fff;
