--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       label {
         display: block;
       }
-      
+
       input:not([type=radio]) {
         padding: .5em;
         border: solid 1px #fff;
@@ -37,9 +37,16 @@
         cursor: pointer;
       }
 
-      h1,th {
+      h1 {
         color: green;
       }
+      th,.th {
+        color: green;
+        font-weight: bold;
+        text-align: center;
+        white-space: nowrap;
+      }
+
       #back {
         position: absolute;
         top: 1rem;
