--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
       h1 {
         color: green;
       }
+
       th,.th {
         color: green;
         font-weight: bold;
         text-align: center;
         white-space: nowrap;
+      }
+      td > * {
+        vertical-align: middle;
       }
 
       #back {
