--- a/grid.html
+++ b/grid.html
@@ -33,7 +33,7 @@
     padding-right: 5px;
     display: block;
   }
-  td input[type=number] {
+  td input:not([type=checkbox]) {
     width:7rem;
   }
   td:nth-child(2),th:nth-child(2) {
