--- a/grid.html
+++ b/grid.html
@@ -42,7 +42,7 @@
 </style>
 <table id=grid>  
   <tr>      
-    <th onclick=backload('mock')>Pump</th style='vertical-align: bottom'>
+    <th style='vertical-align: bottom' onclick=backload('mock')>Pump</th>
       <th>
         <button onclick='rm(this)'><i class="fa fa-times"/></button>
         <button onclick='edit(this)'><i class="fa fa-pencil-square-o"></i></button>
