--- a/grid.html
+++ b/grid.html
@@ -186,7 +186,7 @@
   <tr>
     <td class='th'>
       <span>Results</span>
-      <button onclick='backload("curve")'>
+      <button style='line-height: 100%' onclick='backload("curve")'>
         <i class="fa fa-line-chart"/>
       </button>
     </td>
