--- a/headtool.html
+++ b/headtool.html
@@ -35,7 +35,7 @@
 			<input id=Ds><br>
 			<label>Suction tank<br>
 				<input id=suc onclick='suction(this)' type=checkbox>
-			</label><br>
+			</label>
 			<div id="sucGauge">
 				Suction gauge pressure<br>
 				<input id=Ps><br>
