--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
       label {
         display: block;
       }
-
+      label > * {
+        vertical-align: middle;
+      }
+      label [type=radio] {
+        margin-top: 0;
+        margin-bottom: 3px;
+      }
       input:not([type=radio]) {
         padding: .5em;
         border: solid 1px #fff;
