--- a/grid.html
+++ b/grid.html
@@ -1,13 +1,12 @@
 
 <style scoped=scoped>       
-  .sum {
+  /*.sum {
     font-weight: bold;
   }
   .sum td:not(:first-child) {
     color: green;
   }      
-
-  td.result span {
+    td.result span {
     position: absolute; 
     left: 50%;
     bottom: 1px;
@@ -15,7 +14,7 @@
   }
   td.result {
     position: relative;
-  }
+  }*/
   td>div>em {
     color: green;
   }
