--- a/notes.html
+++ b/notes.html
@@ -34,20 +34,20 @@
 <button class=prime onclick='save()'>SAVE</button>
 <script>
 	if (Idx<Cond.length) {
-		$('[name]').each(function(i,e) {
+		nm().each(function(i,e) {
 			$(e).val(Cond[Idx][$(e).attr('name')]);
 		});				
 	} else {
-		$('[name=name]').val('Condition ' + (Idx+1));
+		nm('name').val('Condition ' + (Idx+1));
 		const dt = new Date();
     	dt.setMinutes(dt.getMinutes()-dt.getTimezoneOffset());
-    	$('[name=date]').val(dt.toJSON().slice(0,10));		
+    	nm('date').val(dt.toJSON().slice(0,10));		
 	}
 	function save() {
 		if (Idx == Cond.length) {
 			Cond.push(loadProp('defCond'));
 		};				
-		$('[name]').each(function(i,e) {
+		nm().each(function(i,e) {
 			Cond[Idx][$(e).attr('name')] = $(e).val();
 		});
 		saveCond();
