--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
             grid: false       
           });        
           saveProp('units',IMP);
-          saveProp('conditions',[]);          
+          saveProp('conditions',[]);
+          saveProp('headtool',{Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1});          
         }
         Cond = loadProp('conditions');
         Units = loadProp('units');
+        HeadTool = loadProp('headtool');
         return (DefCond= loadProp('defCond'));
       }
       Dlg=require('electron').remote.dialog;
