--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@
       function nm(nm,e=document) {
         return $(e).find(`[name=${nm}]`.replace('=]',']'));              
       }
+      function setData(ctls,d) {
+        let v;
+        ctls.each(function(i,el) {
+          switch (el.type) {
+            case 'text':case 'number':
+              v = $(el).val();
+              break;
+            case 'checkbox':
+              v = el.checked;
+              break;
+            case 'select-one':
+              v = $(el).children(':selected').index();
+          }
+          d[$(el).attr('name')] = v;
+        }); 
+      }     
       function setCtls(ctls,d) {
         ctls.each((j,e)=>{
           const ctl = $(e), v = d[ctl.attr('name')];
@@ -181,7 +197,7 @@
           });        
           saveProp('units',IMP);
           saveProp('conditions',[]);
-          saveProp('headtool',{Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1});          
+          saveProp('headtool',{Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1,suc:true});          
         }
         Cond = loadProp('conditions');
         Units = loadProp('units');
